tests/components/AGTable.spec.js
// import React from 'react'
// import AGTable from 'components/AGTable/AGTable'

// TypeError: Cannot convert undefined or null to object
describe('(Component) AGTable', () => {
  it('should exist', () => {
    // const wrapper = shallow(
    // <AGTable />
    // );
    // expect(wrapper).toMatchSnapshot();
  })
})
